force-app/main/default/objects/Registration_Renewal_Field_Override__mdt/Registration_Renewal_Field_Override__mdt.object-meta.xml
<CustomObject>
    <description>Provides "override" values that set field values on the registration object that are different from the values of the original registration so that the user is required to set these values manually on the renewal application. These can be set by registration record type</description>
    <label>Registration Renewal Field Override</label>
    <pluralLabel>Registration Renewal Field Overrides</pluralLabel>
</CustomObject>