force-app/main/default/objects/Registration_Renewal_Field_Override__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <inlineHelpText>Enter the API name of the field you wish to override</inlineHelpText>
    <label>Field API Name</label>
    <length>83</length>
    <required>true</required>
    <type>Text</type>
</CustomField>