force-app/main/default/objects/Registration_Renewal_Field_Override__mdt/fields/Registration_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Record_Type__c</fullName>
    <inlineHelpText>Enter the developer name of the registration record type to which this override applies. Leaving blank means that this override will apply to ALL registration types</inlineHelpText>
    <label>Registration Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>