force-app/main/default/objects/Registration_Renewal_Field_Override__mdt/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Registration_Record_Type__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
</ListView>